@@ -4,22 +4,27 @@ import com.komentum.config.WebConfig;
 import com.komentum.global.properties.FileStorageProperty;
 import com.komentum.global.properties.FileStorageProperty.Storage;
 import com.komentum.global.properties.SecurityProperties;
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+@Slf4j
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -32,13 +37,22 @@ public class SecurityConfig {
 
   private final FileStorageProperty fileStorageProperty;
 
+  private final CustomOauth2UserService customOauth2UserService;
+
+  private final OAuth2LogInSuccessHandler oAuth2LogInSuccessHandler;
+
+  private final OAuth2LoginFailureHandler oAuth2LoginFailureHandler;
+
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
     http
         .csrf(AbstractHttpConfigurer::disable)
-        .cors(Customizer.withDefaults())
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
         .formLogin(AbstractHttpConfigurer::disable)
         .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+        .sessionManagement(session ->
+            session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        // 요청 인증 / 인가 설정
         .authorizeHttpRequests(auth -> {
           auth.requestMatchers(securityProperties.getWhiteList()).permitAll();
           auth.requestMatchers(HttpMethod.GET, securityProperties.getWhiteListGet()).permitAll();
@@ -49,16 +63,33 @@ public class SecurityConfig {
             auth.requestMatchers(HttpMethod.GET, WebConfig.UPLOAD_URL_PREFIX + "/**").permitAll();
           }
           auth.anyRequest().authenticated();
-        });
+        })
+        // oauth2 설정
+        .oauth2Login(oauth -> {
+          oauth.userInfoEndpoint(c -> c
+                  .userService(customOauth2UserService))
+              .successHandler(oAuth2LogInSuccessHandler)
+              .failureHandler(oAuth2LoginFailureHandler);
+        })
+        .exceptionHandling(exception -> exception.authenticationEntryPoint(
+            new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)
+        ));
     return http.build();
   }
 
   @Bean
   UrlBasedCorsConfigurationSource corsConfigurationSource() {
+    // 🔥 디버깅 로그
+    log.info("===== CORS Allowed Origins =====");
+    Arrays.stream(securityProperties.getAllowedOriginList())
+        .forEach(log::info);
+    log.info("================================");
     CorsConfiguration configuration = new CorsConfiguration();
     configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowedMethods(List.of("*"));
-    configuration.setAllowedOriginPatterns(List.of("*"));
+    configuration.setAllowedOriginPatterns(
+        Arrays.asList(securityProperties.getAllowedOriginList()));
+    configuration.setAllowCredentials(true);
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
     return source;
